# cpprestsdk

Release/: CMakeLists.txt
Release/cmake/: cpprest_find_botan.cmake
Release/include/cpprest/: http_client.h
Release/src/: CMakeLists.txt
Release/src/http/client/: http_client.cpp  http_client_asio.cpp  http_client_impl.h  http_client_winhttp.cpp
Release/src/http/common/: x509_cert_utilities.h
Release/src/http/oauth/: oauth2.cpp
Release/src/json/: json_parsing.cpp
Release/src/pch/: stdafx.h
Release/src/pplx/: threadpool.cpp
Release/src/streams/: fileio_posix.cpp
Release/src/utilities/: asyncrt_utils.cpp
Release/tests/functional/http/: CMakeLists.txt
Release/tests/functional/http/client/: CMakeLists.txt  authentication_tests.cpp  client_construction.cpp  compression_tests.cpp  connections_and_errors.cpp  multiple_requests.cpp  oauth2_tests.cpp  outside_tests.cpp  progress_handler_tests.cpp  proxy_tests.cpp  request_helper_tests.cpp  request_stream_tests.cpp  response_extract_tests.cpp  response_stream_tests.cpp
Release/tests/functional/http/listener/: CMakeLists.txt
Release/tests/functional/http/utilities/: CMakeLists.txt
Release/tests/functional/json/: parsing_tests.cpp
Release/tests/functional/utils/: strings.cpp
